--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "description": "Backend for Melodies web application",
   "dependencies": {
     "aws-sdk": "^2.1531.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.1",
     "multer": "^1.4.5-lts.1"
   },
