--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "aws-sdk": "^2.1531.0",
         "backend": "file:",
         "bcryptjs": "^3.0.2",
+        "cloudinary": "^2.6.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
