--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "express-fileupload": "^1.5.1",
+        "express-rate-limit": "^7.5.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.1.1",
+        "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
         "prettier": "^3.5.3",
         "swagger-jsdoc": "^6.2.8",
