--- a/package.json
+++ b/package.json
@@ -15,16 +15,20 @@
         "aws-sdk": "^2.1531.0",
         "backend": "file:",
         "bcryptjs": "^3.0.2",
+        "busboy": "^1.6.0",
         "cloudinary": "^2.6.0",
         "cors": "^2.8.5",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "express-fileupload": "^1.5.1",
         "express-rate-limit": "^7.5.0",
+        "fs": "^0.0.1-security",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.1.1",
         "morgan": "^1.10.0",
         "multer": "^1.4.5-lts.1",
+        "multer-storage-cloudinary": "^4.0.0",
+        "path": "^0.12.7",
         "prettier": "^3.5.3",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1"
